--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 			<span class="icon major fa-cloud"></span>
 			<h1>I'm <strong>Adrian</strong>, a software engineer<br />
 				based in San Francisco</a>.</h1>
-			<p>See all perspectives, find the best<br />
-				solution, and liberate the mind from the mundane.</p>
+			<!-- <p>It'snic</p> -->
 			<ul class="actions special">
 				<li><a href="#one" class="button scrolly">Discover</a></li>
 			</ul>
@@ -37,19 +36,19 @@
 			<div class="row gtr-150">
 				<div class="col-6 col-12-medium">
 					<header class="major">
-						<h2>See all perspectives, find the best
-							solution, liberate the mind from the mundane.</h2>
+						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>These three phrases encapsulate my approach to software engineering.
-						They reflect my desire to help free the client's time and energy to
-						focus on meaningful questions. When an engineer's solution is good, the client transcends the tool, operating on
+					<p>My approach to solving problems involves seeing all perspectives, then implementing the best solution.
+
+						When an
+						engineer builds a great tool, the client transcends it and operates
+						on
 						a
 						level
-						beyond what was previously possible. When the developer's output has satisfied the client and the client can
-						produce at a
-						higher level
-						of
-						achievement is my idea of success.
+						beyond what was previously possible. In this way, one defines success by how much the developer has
+						satisfied the client, by whether client can
+						perform at a
+						higher level.
 					</p>
 				</div>
 				<div class="col-6 col-12-medium imp-medium">
@@ -60,7 +59,67 @@
 	</section>
 
 	<!-- Two -->
-	<section id="
+	<!-- <section id="
+							 two" class="main style2">
+		<div class="container">
+			<h1 class="skills-banner">Skills</h1>
+			<div class="row">
+				<div class="col-lg-12 skill-column">
+					<div class="icon-container">
+						<i class="icon-reactjs"></i>
+						<p>React</p>
+					</div>
+					<div class="icon-container">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+							<g fill="#ff8300">
+								<path d="M65.6 65.4c2.9-.3 5.1-2.8 5-5.8-.1-3-2.6-5.4-5.6-5.4h-.2c-3.1.1-5.5 2.7-5.4 5.8.1 1.5.7 2.8 1.6 3.7-3.4 6.7-8.6 11.6-16.4 15.7-5.3 2.8-10.8 3.8-16.3 3.1-4.5-.6-8-2.6-10.2-5.9-3.2-4.9-3.5-10.2-.8-15.5 1.9-3.8 4.9-6.6 6.8-8-.4-1.3-1-3.5-1.3-5.1-14.5 10.5-13 24.7-8.6 31.4 3.3 5 10 8.1 17.4 8.1 2 0 4-.2 6-.7 12.8-2.5 22.5-10.1 28-21.4z"></path>
+								<path d="M83.2 53c-7.6-8.9-18.8-13.8-31.6-13.8H50c-.9-1.8-2.8-3-4.9-3h-.2c-3.1.1-5.5 2.7-5.4 5.8.1 3 2.6 5.4 5.6 5.4h.2c2.2-.1 4.1-1.5 4.9-3.4H52c7.6 0 14.8 2.2 21.3 6.5 5 3.3 8.6 7.6 10.6 12.8 1.7 4.2 1.6 8.3-.2 11.8-2.8 5.3-7.5 8.2-13.7 8.2-4 0-7.8-1.2-9.8-2.1-1.1 1-3.1 2.6-4.5 3.6 4.3 2 8.7 3.1 12.9 3.1 9.6 0 16.7-5.3 19.4-10.6 2.9-5.8 2.7-15.8-4.8-24.3z"></path>
+								<path d="M32.4 67.1c.1 3 2.6 5.4 5.6 5.4h.2c3.1-.1 5.5-2.7 5.4-5.8-.1-3-2.6-5.4-5.6-5.4h-.2c-.2 0-.5 0-.7.1-4.1-6.8-5.8-14.2-5.2-22.2.4-6 2.4-11.2 5.9-15.5 2.9-3.7 8.5-5.5 12.3-5.6 10.6-.2 15.1 13 15.4 18.3 1.3.3 3.5 1 5 1.5-1.2-16.2-11.2-24.6-20.8-24.6-9 0-17.3 6.5-20.6 16.1-4.6 12.8-1.6 25.1 4 34.8-.5.7-.8 1.8-.7 2.9z"></path>
+							</g>
+						</svg>
+						<p>Redux</p>
+					</div>
+					<div class="icon-container">
+						<i class="icon-javascript-alt"></i>
+						<p>JavaScript</p>
+					</div>
+					<div class="icon-container">
+						<i class="icon-d3"></i>
+						<p>d3.js</p>
+					</div>
+					<div class="icon-container">
+						<i class="icon-python"></i>
+						<p>Python</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 skill-column">
+					<div class="icon-container">
+						<i class="icon-ruby-on-rails-alt"></i>
+						<p>Ruby on Rails</p>
+					</div>
+					<div class="icon-container">
+						<i class="icon-ruby"></i>
+						<p>Ruby</p>
+					</div>
+					<div class="icon-container">
+						<i class="icon-postgres"></i>
+						<p>PostgreSQL</p>
+					</div>
+					<div class="icon-container">
+						<i class="icon-html5-alt"></i>
+						<p>HTML5</p>
+					</div>
+					<div class="icon-container">
+						<i class="icon-css3-alt"></i>
+						<p>CSS3</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section> -->
+	<!-- <section id="
 						 two" class="main style2">
 		<div class="container">
 			<div class="row gtr-150">
@@ -78,19 +137,18 @@
 					<header class="major">
 						<h2>Skills</h2>
 					</header>
-					<p>Full stack development is my professional expertise, including database design, backend and
-						frontend programming,
-						rapid
-						prototyping, and enterprise-level collaboration. My solutions have earned me accolades at Hackathons, and saved
-						enterprise-level operations millions of dollars. It would seem that technology's current abilty to empower people
+					<p>Technology's current abilty to empower people
 						and
 						organizations is unprecented.
+						backend and
+						frontend programming,
+						rapid
+						prototyping, and enterprise-level collaboration.
 					</p>
-					<p>Equally fluent are my presentation skills, developed from 100+ recitals
+					<p>100+ recitals
 						given as a pianist and
 						hundreds of lessons given as an
-						educator of young
-						adults. As such, my additional expertises include education/instruction, and
+						educator make me a skilled presenter. As such, my additional expertises include education/instruction, and
 						classical
 						music performance.</p>
 					<p>Recent interests include developing tools for educators, and reading the great works of fiction in
@@ -101,89 +159,131 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<!-- Three -->
-	<section id="three" class="main style1 special">
+	<section id="three" class="main style2 special">
+		<style>
+			img {
+				object-fit: cover;
+				height: 300px;
+			}
+		</style>
 		<div class="container">
 			<header class="major">
 				<h2>Portfolio</h2>
 			</header>
-			<p>The following projects reflect some of the problems that fascinate</p>
+			<!-- <p>.</p> -->
 			<div class="row gtr-150">
 				<div class="col-4 col-12-medium">
-					<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit"><img src="images/appacademy.jpg" alt="" /></span>
+					<h3>Technical Instructor</h3>
+					<p>As a full-time instructor, I guide students
+						through
+						the final stages of App Academy's full-stack web-development curriculum.</p>
+					<!-- <ul class="actions special">
+						<li><a href="https://appacademy.io" class="button">More Info</a></li>
+					</ul> -->
+				</div>
+				<div class="col-4 col-12-medium">
+					<span class="image fit"><img src="images/pineapple.jpg" alt="" /></span>
+					<h3>Software Engineer</h3>
+					<p>At Williams-Sonoma Inc., our team saved the company millions
+						of dollars by streamlining inventory management processes.</br></br>Technologies:
+						<strong>Web Components, Angular, Typescript, Java, Springboot,
+							IBM
+							Sterling
+							OMS, Oracle
+							SQL
+							Developer.</strong></p>
+				</div>
+				<div class="col-4 col-12-medium">
+					<span class="image fit"><img src="images/mealme.png" alt="" /></span>
+					<h3>Hackathon Prizewinner</h3>
+					<p>It’s been fulfilling to work with some great teammates and win some cash along the way. Some of the projects
+						are:
+						<strong><a href="https://github.com/Adrianjewell91/all-clear-frontend">All-Clear</a></strong> (FirstNet Public
+						Safety Hackathon),
+						<strong><a href="https://www.npmjs.com/package/react-crypto-graph">React-Crypto-Graph</a></strong> (Developer
+						Week 2018),
+						<strong><a href="https://github.com/ckane30691/mealme">MealMe</a></strong> (#100Hacks), <strong><a href="https://github.com/reidjs/pharmachain">PharmaChain</a></strong>
+						(DoraHacks:
+						Impact Hub), <strong><a href="https://github.com/Adrianjewell91/vitaDETECTIVE">VitaDetective</a></strong>
+						(GENOME
+						- LINK).</p>
+				</div>
+				<div class="col-4 col-12-medium">
+					<span class="image fit"><img src="images/theorizer.png" alt="" /></span>
 					<h3>Theorizer</h3>
 					<p>Theorizer is an artificial intelligence that accepts input from
 						either a
-						keyboard or piano and returns useful information about the music.</p>
+						keyboard or piano and returns useful information about the music.
+						</br> </br> Technologies: <strong>React/Redux, Django, Keras, Theano.</strong></p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Github</a></li>
-						<li><a href="#" class="button">Live</a></li>
+						<li><a href="https://github.com/adrianjewell91/theorizer" class="button">Github</a></li>
+						<li><a href="https://theorizer.herokuapp.com" class="button">Live</a></li>
 					</ul>
 				</div>
 				<div class="col-4 col-12-medium">
-					<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-					<h3>Hackathon Prizewinner</h3>
-					<p>It’s been fulfilling to work with some great teammates and build solutions, including:
-						All-Clear (FirstNet Public Safety Hackathon),
-						React-Crypto-Graph (Developer Week 2018),
-						MealMe(#100Hacks), PharmaChain(DoraHacks: Impact Hub), VitaDetective(GENOME - LINK).</p>
-					<ul class="actions special">
-
-						<li><a href="#" class="button">Github</a></li>
-						<li><a href="#" class="button">Live</a></li>
-					</ul>
-				</div>
-				<div class="col-4 col-12-medium">
-					<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit"><img src="images/translateoverflow.png" alt="" /></span>
 					<h3>Translate Overflow</h3>
-					<p>Thank you to Chris Guan and Porfirio Matias for helping me build Translate Overflow. Translate Overflow helps
-						individuals get customized translations of documents through a version-control system.</p>
+					<p>Thank you to Chris Guan and Porfirio Matias for building Translate Overflow with me. This application gets
+						individuals customized translations of documents through a version-control system.
+						</br> </br> Technologies: <strong>React/Redux, Django, Webpack, SQL.</strong></p>
 					<ul class="actions special">
 
-						<li><a href="#" class="button">Github</a></li>
-						<li><a href="#" class="button">Live</a></li>
+						<li><a href="https://github.com/Adrianjewell91/tl_overflow" class="button">Github</a></li>
+						<li><a href="https://translateoverflow.herokuapp.com/#/" class="button">Live</a></li>
 					</ul>
 				</div>
 				<div class="col-4 col-12-medium">
-					<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-					<h3>Yi Jing</h3>
-					<p>Partly nostalgia, and partly desire to preserve ancient Chinese history motivated me to make an online I-Ching.
+					<span class="image fit"><img src="images/yijing.png" alt="" /></span>
+					<h3>Yi Jing (易经)</h3>
+					<p>Partly nostalgia, and partly the desire to preserve ancient Chinese history motivated me to make an online
+						I-Ching.
 
-						During my time in China, the I Ching (易经) made an appearance in my travels to the Yunnan Province
+						During my time in China, the I-Ching (易经) made an appearance in my travels to the Yunnan Province
 						(云南省).
-						As a divination tool, it has given me perspective on important life decisions. </p>
+						As a divination tool, it has given me perspective on important life decisions.
+						</br> </br> Technologies: <strong>Javascript, HTML5 Canvas, Webpack.</strong></p>
 					<ul class="actions special">
 
-						<li><a href="#" class="button">Github</a></li>
-						<li><a href="#" class="button">Live</a></li>
+						<li><a href="https://github.com/Adrianjewell91/yijing" class="button">Github</a></li>
+						<li><a href="https://adrianjewell91.github.io/yijing/" class="button">Live</a></li>
 					</ul>
 				</div>
 				<div class="col-4 col-12-medium">
-					<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit"><img src="images/luggage.png" alt="" /></span>
 					<h3>Overhead Luggage Management</h3>
-					<p>It became apparent to me that airlines cannot adequately manage overhead luggage
-						space. Multiple time, when I board
-						the plane, I have to put my luggage in an overhead far removed from my seat, and it causes a traffic jam. The
-						boarding
-						procedure could benefit from more organized management of the overhead luggage space.</p>
+					<p>Airplane
+
+						logistics could benefit from better management of the overhead luggage space.</br>
+						</br> Technologies: <strong>Web Components.</strong></p>
 					<ul class="actions special">
 
-						<li><a href="#" class="button">Github</a></li>
-						<li><a href="#" class="button">Live</a></li>
+						<li><a href="https://github.com/Adrianjewell91/overheadLuggageManagement" class="button">Github</a></li>
+						<li><a href="https://adrianjewell91.github.io/overheadLuggageManagement/" class="button">Live</a></li>
 					</ul>
 				</div>
 				<div class="col-4 col-12-medium">
-					<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit"><img src="images/madscience.png" alt="" /></span>
 					<h3>Madscience: Django/React Configuration</h3>
-					<p>Madscience was my foray into technical writing with simplified Chinese. The guide offers an easy configuration
-						for
-						mounting a single page application on a Django backend.</p>
+					<p>Madscience was my foray into technical writing in simplified Chinese. The guide outlines the boilerplate
+						required for
+						mounting React on a Django backend.</p>
 					<ul class="actions special">
-
-						<li><a href="#" class="button">Github</a></li>
-						<li><a href="#" class="button">Live</a></li>
+						<li><a href="https://github.com/Adrianjewell91/madscience-django-react-webpack" class="button">Github</a></li>
+					</ul>
+				</div>
+				<div class="col-4 col-12-medium">
+					<span class="image fit"><img src="images/pianocloud.png" alt="" /></span>
+					<h3>PianoCloud</h3>
+					<p>A faithful clone of SoundCloud grounded me in Web Development fundamentals, and gave me an appreciation for the
+						complexity of web applications.</br>
+						</br> Technologies: <strong>React/Redux, Ruby on Rails, PostGreSQL.</strong>
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/adrianjewell91/PianoCloud" class="button">Github</a></li>
 					</ul>
 				</div>
 			</div>
@@ -191,20 +291,20 @@
 	</section>
 
 	<!-- Four -->
-	<section id="four" class="main style2 special">
+	<!-- <section id="four" class="main style2 special">
 		<div class="container">
 			<header class="major">
-				<h2>Want to get in touch?</h2>
+				<h2>Contact</h2>
 			</header>
-			<!-- <p>Feel free to reach out by any means listed below.</p> -->
-			<!-- <ul class="actions special">
+			<p>Let's work together.</p>
+			<ul class="actions special">
 				<li><a href="#" class="button wide primary">Sign Up</a></li>
 				<li><a href="#" class="button wide">Learn More</a></li>
-			</ul> -->
+			</ul>
 		</div>
-	</section>
+	</section> -->
 
-	<section id="five" class="main style1">
+	<!-- <section id="five" class="main style1">
 		<div class="container">
 			<h4>Send a Message</h4>
 			<form action="https://formspree.io/adrianjewell91@gmail.com" method="POST">
@@ -214,8 +314,8 @@
 					</div>
 					<div class="col-6 col-12-xsmall">
 						<input type="email" name="demo-email _replyto" id="demo-email" value="" placeholder="Email" />
-					</div>
-					<!-- <div class="col-12">
+					</div> -->
+	<!-- <div class="col-12">
 						<select name="demo-category" id="demo-category">
 							<option value="">- Category -</option>
 							<option value="1">Manufacturing</option>
@@ -224,7 +324,7 @@
 							<option value="1">Human Resources</option>
 						</select>
 					</div> -->
-					<!-- <div class="col-4 col-12-small">
+	<!-- <div class="col-4 col-12-small">
 						<input type="radio" id="demo-priority-low" name="demo-priority" checked>
 						<label for="demo-priority-low">Low</label>
 					</div>
@@ -236,15 +336,15 @@
 						<input type="radio" id="demo-priority-high" name="demo-priority">
 						<label for="demo-priority-high">High</label>
 					</div> -->
-					<!-- <div class="col-6 col-12-small">
+	<!-- <div class="col-6 col-12-small">
 						<input type="checkbox" id="demo-copy" name="demo-copy">
 						<label for="demo-copy">Email me a copy</label>
 					</div> -->
-					<!-- <div class="col-6 col-12-small">
+	<!-- <div class="col-6 col-12-small">
 						<input type="checkbox" id="demo-human" name="demo-human" checked>
 						<label for="demo-human">Not a robot</label>
 					</div> -->
-					<div class="col-12">
+	<!-- <div class="col-12">
 						<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
 					</div>
 					<div class="col-12">
@@ -256,10 +356,13 @@
 				</div>
 			</form>
 		</div>
-	</section>
+	</section> -->
 
 	<!-- Footer -->
 	<section id="footer">
+		<header class="major">
+			<h2>Contact</h2>
+		</header>
 		<ul class="icons">
 			<li><a href="./assets/resume.pdf" class="icon alt" download><span>C.V.</span></a> </li>
 			<!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
