hide projects because theyre terrible

--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
 		</style>
 		<div class="container">
 			<header class="major">
-				<h2>Portfolio</h2>
+				<h2>
+					Experience
+				</h2>
 			</header>
 			<!-- <p>.</p> -->
 			<div class="row gtr-150">
@@ -212,7 +214,7 @@
 						(GENOME
 						- LINK).</p>
 				</div>
-				<div class="col-4 col-12-medium">
+				<!-- <div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/theorizer.png" alt="" /></span>
 					<h3>Theorizer</h3>
 					<p>Theorizer is an artificial intelligence that accepts input from
@@ -285,7 +287,7 @@
 					<ul class="actions special">
 						<li><a href="https://github.com/adrianjewell91/PianoCloud" class="button">Github</a></li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
