--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 			<li><a href="https://www.linkedin.com/in/adrian-jewell/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 			<li><a href="https://www.soundcloud.com/adrianjewell" class="icon alt fa-soundcloud"><span class="label">Soundcloud</span></a></li>
 			<li><a href="https://github.com/adrianjewell91" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-			<li><a href="adrianjewell91@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+			<li><a href="mailto:adrianjewell91@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 		</ul>
 		<ul class="copyright">
 			<li>&copy; 2019</li>
