--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<p>My approach to solving problems involves seeing all perspectives, then implementing the best solution.
 
 						When an
-						engineer builds a great tool, the client transcends it and operates
+						engineer builds a great tool, the client transcends it, operating
 						on
 						a
 						level
@@ -172,7 +172,7 @@
 		<div class="container">
 			<header class="major">
 				<h2>
-					Experience
+					Work Experience
 				</h2>
 			</header>
 			<!-- <p>.</p> -->
@@ -202,7 +202,8 @@
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/mealme.png" alt="" /></span>
 					<h3>Hackathon Prizewinner</h3>
-					<p>It’s been fulfilling to work with some great teammates and win some cash along the way. Some of the projects
+					<p>Work with some great teammates, and winning some cash along the way, has been a fulfilling experience. Some of
+						the projects
 						are:
 						<strong><a href="https://github.com/Adrianjewell91/all-clear-frontend">All-Clear</a></strong> (FirstNet Public
 						Safety Hackathon),
