--- a/index.html
+++ b/index.html
@@ -38,16 +38,15 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>My approach to solving problems involves seeing all perspectives, then implementing the best solution.
-
-						When an
-						engineer builds a great tool, the client transcends it, operating
+					<p>My approach to solving problems is a multi-step process. One must see all possible cases of the problem, find
+						the optimal solution, then implement it in an elegant way. If the engineering is correct,
+						then
+						a great tool will have been built, and the client will transcend it, operating
 						on
 						a
-						level
-						beyond what was previously possible. In this way, one defines success by how much the developer has
-						satisfied the client, by whether client can
-						perform at a
+						plane
+						beyond what was previously possible. In this way, one defines success by how much client can
+						perform at this
 						higher level.
 					</p>
 				</div>
