--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>My approach to solving problems is a multi-step process. One must see all possible cases of the problem, find
-						the optimal solution, then implement it in an elegant way. If the engineering is correct,
-						then
-						a great tool will have been built, and the client will transcend it, operating
+					<p>Solving a problem is a multi-step process. One must perceive all possible use cases,
+						find
+						the optimal solution, then produce an elegant implementation. This takes time and energy, but at the end, if the
+						engineering is
+						correct, a great tool will have been built. If the client utilizes the tool, he or she will transcend it,
+						operating
 						on
 						a
 						plane
-						beyond what was previously possible. In this way, one defines success by how much client can
+						beyond what was possible before. In this way, one defines success by how much stakeholder can
 						perform at this
 						higher level.
 					</p>
