--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 						operating
 						on
 						a
-						plane
-						beyond what was possible before. In this way, one defines success by how much stakeholder can
-						perform at this
-						higher level.
+						level
+						beyond what was possible before. In this way, one defines success by the degree to which the engineer lifts the
+						them to this higher plane.
 					</p>
 				</div>
 				<div class="col-6 col-12-medium imp-medium">
