--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						on
 						a
 						level
-						beyond what was possible before. In this way, one defines success by the degree to which the engineer lifts the
+						beyond what was possible before. In this way, one defines success by the degree to which the engineer lifts
 						them to this higher plane.
 					</p>
 				</div>
