swap hackathon ordering

--- a/index.html
+++ b/index.html
@@ -205,15 +205,15 @@
 					<p>Work with some great teammates, and winning some cash along the way, has been a fulfilling experience. Some of
 						the projects
 						are:
-						<strong><a href="https://github.com/Adrianjewell91/all-clear-frontend">All-Clear</a></strong> (FirstNet Public
-						Safety Hackathon),
 						<strong><a href="https://www.npmjs.com/package/react-crypto-graph">React-Crypto-Graph</a></strong> (Developer
 						Week 2018),
 						<strong><a href="https://github.com/ckane30691/mealme">MealMe</a></strong> (#100Hacks), <strong><a href="https://github.com/reidjs/pharmachain">PharmaChain</a></strong>
 						(DoraHacks:
 						Impact Hub), <strong><a href="https://github.com/Adrianjewell91/vitaDETECTIVE">VitaDetective</a></strong>
-						(GENOME
-						- LINK).</p>
+						(GENOME-LINK),
+						<strong><a href="https://github.com/Adrianjewell91/all-clear-frontend">All-Clear</a></strong> (FirstNet Public
+						Safety Hackathon).
+					</p>
 				</div>
 				<!-- <div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/theorizer.png" alt="" /></span>
