change wsi logo

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/pineapple.jpg" alt="" /></span>
 					<h3>Software Engineer</h3>
-					<p>At Williams-Sonoma Inc., our team saved the company millions
-						of dollars by streamlining inventory management processes.</br></br>Technologies:
+					<p>At Williams-Sonoma Inc., our team streamlined inventory management processes for departments across the
+						organization.</br></br>Technologies:
 						<strong>Web Components, Angular, Typescript, Java, Springboot,
 							IBM
 							Sterling
