--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/mealme.png" alt="" /></span>
 					<h3>Hackathon Prizewinner</h3>
-					<p>Work with some great teammates, and winning some cash along the way, has been a fulfilling experience. Some of
+					<p>Work withing great teammates, and winning some cash along the way, has been a fulfilling experience. Some
+						of
 						the projects
 						are:
 						<strong><a href="https://www.npmjs.com/package/react-crypto-graph">React-Crypto-Graph</a></strong> (Developer
