--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/mealme.png" alt="" /></span>
 					<h3>Hackathon Prizewinner</h3>
-					<p>Work withing great teammates, and winning some cash along the way, has been a fulfilling experience. Some
+					<p>Working with great teammates, and winning some cash along the way, has been a fulfilling experience. Some
 						of
 						the projects
 						are:
