--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						a
 						level
 						beyond what was possible before. In this way, one defines success by the degree to which the engineer lifts
-						them to this higher plane.
+						the user to this higher plane.
 					</p>
 				</div>
 				<div class="col-6 col-12-medium imp-medium">
