remove download attribute

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 			<h2>Contact</h2>
 		</header>
 		<ul class="icons">
-			<li><a href="./assets/resume.pdf" class="icon alt" download><span>C.V.</span></a> </li>
+			<li><a href="./assets/resume.pdf" class="icon alt"><span>C.V.</span></a> </li>
 			<!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
 			<li><a href="https://www.linkedin.com/in/adrian-jewell/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 			<li><a href="https://www.soundcloud.com/adrianjewell" class="icon alt fa-soundcloud"><span class="label">Soundcloud</span></a></li>
