--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="inner">
 			<span class="icon major fa-cloud"></span>
 			<h1>I'm <strong>Adrian</strong>, a software engineer<br />
-				based in San Francisco</a>.</h1>
+				in San Francisco</a>.</h1>
 			<!-- <p>It'snic</p> -->
 			<ul class="actions special">
 				<li><a href="#one" class="button scrolly">Discover</a></li>
