add music and fix resume

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	<!-- Header -->
 	<section id="header">
 		<div class="inner">
-			<span class="icon major fa-cloud"></span>
+			<span class="icon major fa-music"></span>
 			<h1>I'm <strong>Adrian</strong>, a software engineer<br />
-				based in San Francisco</a>.</h1>
+				and pianist based in San Francisco</a>.</h1>
 			<!-- <p>It'snic</p> -->
 			<ul class="actions special">
 				<li><a href="#one" class="button scrolly">Discover</a></li>
@@ -40,19 +40,23 @@
 					</header>
 					<p>Solving a problem is a multi-step process. One must perceive all possible use cases,
 						find
-						the optimal solution, then produce an elegant implementation. This takes time and energy, but at the end, if the
+						the optimal solution, then produce an elegant implementation. This takes time and energy, but at
+						the end, if the
 						engineering is
-						correct, a great tool will have been built. If the client utilizes the tool, he or she will transcend it,
+						correct, a great tool will have been built. If the client utilizes the tool, he or she will
+						transcend it,
 						operating
 						on
 						a
 						level
-						beyond what was possible before. In this way, one defines success by the degree to which the engineer lifts
+						beyond what was possible before. In this way, one defines success by the degree to which the
+						engineer lifts
 						the user to this higher plane.
 					</p>
 				</div>
 				<div class="col-6 col-12-medium imp-medium">
-					<span class="image fit"><img src="images/headshot.jpg" alt="" style="object-fit: cover; object-position: 0% 20%; height: 375px; width: 100%;" /></span>
+					<span class="image fit"><img src="images/headshot.jpg" alt=""
+							style="object-fit: cover; object-position: 0% 20%; height: 375px; width: 100%;" /></span>
 				</div>
 			</div>
 		</div>
@@ -190,7 +194,8 @@
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/pineapple.jpg" alt="" /></span>
 					<h3>Software Engineer</h3>
-					<p>At Williams-Sonoma Inc., our team streamlined inventory management processes for departments across the
+					<p>At Williams-Sonoma Inc., our team streamlined inventory management processes for departments
+						across the
 						organization.</br></br>Technologies:
 						<strong>Web Components, Angular, Typescript, Java, Springboot,
 							IBM
@@ -202,26 +207,31 @@
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/mealme.png" alt="" /></span>
 					<h3>Hackathon Prizewinner</h3>
-					<p>Working with great teammates and winning some cash along the way has been a fulfilling experience. Some
+					<p>Working with great teammates and winning some cash along the way has been a fulfilling
+						experience. Some
 						of
 						the projects
 						are:
-						<strong><a href="https://www.npmjs.com/package/react-crypto-graph">React-Crypto-Graph</a></strong> (Developer
+						<strong><a
+								href="https://www.npmjs.com/package/react-crypto-graph">React-Crypto-Graph</a></strong>
+						(Developer
 						Week 2018),
-						<strong><a href="https://github.com/ckane30691/mealme">MealMe</a></strong> (#100Hacks), <strong><a href="https://github.com/reidjs/pharmachain">PharmaChain</a></strong>
+						<strong><a href="https://github.com/ckane30691/mealme">MealMe</a></strong> (#100Hacks),
+						<strong><a href="https://github.com/reidjs/pharmachain">PharmaChain</a></strong>
 						(DoraHacks:
-						Impact Hub), <strong><a href="https://github.com/Adrianjewell91/vitaDETECTIVE">VitaDetective</a></strong>
+						Impact Hub), <strong><a
+								href="https://github.com/Adrianjewell91/vitaDETECTIVE">VitaDetective</a></strong>
 						(GENOME-LINK),
-						<strong><a href="https://github.com/Adrianjewell91/all-clear-frontend">All-Clear</a></strong> (FirstNet Public
+						<strong><a href="https://github.com/Adrianjewell91/all-clear-frontend">All-Clear</a></strong>
+						(FirstNet Public
 						Safety Hackathon).
 					</p>
 				</div>
-				<!-- <div class="col-4 col-12-medium">
+				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/theorizer.png" alt="" /></span>
 					<h3>Theorizer</h3>
-					<p>Theorizer is an artificial intelligence that accepts input from
-						either a
-						keyboard or piano and returns useful information about the music.
+					<p>Theorizer is an artificial intelligence that accepts musical data and returns useful information
+						to the user.
 						</br> </br> Technologies: <strong>React/Redux, Django, Keras, Theano.</strong></p>
 					<ul class="actions special">
 						<li><a href="https://github.com/adrianjewell91/theorizer" class="button">Github</a></li>
@@ -229,6 +239,18 @@
 					</ul>
 				</div>
 				<div class="col-4 col-12-medium">
+					<span class="image fit"><img src="images/pianocloud.png" alt="" /></span>
+					<h3>Pianist and Composer</h3>
+					<p>I'm always interested in collaborating with others, and I currently study
+						at
+						the San Francisco Conservatory.
+
+						<ul class="actions special">
+							<li><a href="https://www.soundcloud.com/adrianjewell" class="button">Live Recordings</a>
+							</li>
+						</ul>
+				</div>
+				<!-- <div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/translateoverflow.png" alt="" /></span>
 					<h3>Translate Overflow</h3>
 					<p>Thank you to Chris Guan and Porfirio Matias for building Translate Overflow with me. This application gets
@@ -370,10 +392,14 @@
 		<ul class="icons">
 			<li><a href="./assets/resume.pdf" class="icon alt"><span>C.V.</span></a> </li>
 			<!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-			<li><a href="https://www.linkedin.com/in/adrian-jewell/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-			<li><a href="https://www.soundcloud.com/adrianjewell" class="icon alt fa-soundcloud"><span class="label">Soundcloud</span></a></li>
-			<li><a href="https://github.com/adrianjewell91" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-			<li><a href="mailto:adrianjewell91@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+			<li><a href="https://www.linkedin.com/in/adrian-jewell/" class="icon alt fa-linkedin"><span
+						class="label">LinkedIn</span></a></li>
+			<li><a href="https://www.soundcloud.com/adrianjewell" class="icon alt fa-soundcloud"><span
+						class="label">Soundcloud</span></a></li>
+			<li><a href="https://github.com/adrianjewell91" class="icon alt fa-github"><span
+						class="label">GitHub</span></a></li>
+			<li><a href="mailto:adrianjewell91@gmail.com" class="icon alt fa-envelope"><span
+						class="label">Email</span></a></li>
 		</ul>
 		<ul class="copyright">
 			<li>&copy; 2019</li>
