new resume and slight modifications

--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/theorizer.png" alt="" /></span>
 					<h3>Theorizer</h3>
-					<p>Theorizer is an artificial intelligence that accepts musical data and returns useful information
-						to the user.
+					<p>Theorizer is an artificial intelligence that helps users memorize piano music.
 						</br> </br> Technologies: <strong>React/Redux, Django, Keras, Theano.</strong></p>
 					<ul class="actions special">
 						<li><a href="https://github.com/adrianjewell91/theorizer" class="button">Github</a></li>
