--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/appacademy.jpg" alt="" /></span>
 					<h3>Technical Instructor</h3>
-					<p>As a full-time instructor, I guide students
+<p>As a full-time instructor, I guide students
 						through
-						the final stages of App Academy's full-stack web-development curriculum.</p>
-					<!-- <ul class="actions special">
-						<li><a href="https://appacademy.io" class="button">More Info</a></li>
-					</ul> -->
+						the final stages of App Academy's full-stack web-development curriculum.
+<br><br>
+    Read my recently published article on music and coding <a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">here.</a>
+</p>
 				</div>
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/pineapple.jpg" alt="" /></span>
