--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				and pianist based in San Francisco</a>.</h1>
 			<!-- <p>It'snic</p> -->
 			<ul class="actions special">
-				<li><a href="#one" class="button scrolly">Discover</a></li>
+				<!-- <li><a href="#one" class="button scrolly">Discover</a></li> -->
+				<li><a href="./assets/resume.pdf" class="button">View Resume</a></li>
 			</ul>
 		</div>
 	</section>
