--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						the optimal solution, then produce an elegant implementation. This takes time and energy, but at
 						the end, if the
 						engineering is
-						correct, a great tool will have been built. If the client utilizes the tool, he or she will
+						correct, a great tool will have been built. If the client utilizes the tool, he/she will
 						transcend it,
 						operating
 						on
